--- a/docs/.vuepress/style.styl
+++ b/docs/.vuepress/style.styl
@@ -2,16 +2,16 @@
 @tailwind components
 
 .content {
-    max-width: 820px !important;
+    max-width: 820px;
 }
 
 .sidebar {
-    background-color: #f5f5f5 !important;
+    background-color: #f5f5f5;
 }
 
 .content table tr,
 .content table td {
-    border: 0 !important;
+    border: 0;
 }
 
 @tailwind utilities
