Import tailwind css files using same @imoprt syntax

--- a/docs/.vuepress/style.styl
+++ b/docs/.vuepress/style.styl
@@ -1,8 +1,8 @@
-@tailwind preflight
-@tailwind components
+@import "node_modules/tailwindcss/preflight.css"
+@import "node_modules/tailwindcss/components.css"
 
 @import "./styles/components/vuepress.css"
 
-@tailwind utilities
+@import "node_modules/tailwindcss/utilities.css"
 
 @import "./styles/utilities/bg.css"
